--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
     "@azure/msal-angular": "^1.1.2",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "msal": "^1.4.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
